@@ -1,3 +1,12 @@
+2015-03-28 Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/65596
+	* io/transfer.c (data_transfer_init): If in namelist mode and
+	delimiter is not specified, set it to DELIM_QUOTE, independent
+	of -std.
+	* io/unit.c (init_units): Set flags.delim to the correct
+	initial value of DELIM_UNSPECIFIED.
+
 2015-03-25 Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/65541
